@@ -1,10 +1,21 @@
 package org.writer;
 
-import java.util.Collections;
+import org.writer.csv.CsvDocument;
+import org.writer.model.Months;
+import org.writer.model.Person;
+
+import java.util.List;
 
 public class Main {
     public static void main(String[] args) {
-        var docWriter = new Report(new CsvDocument());
-        docWriter.writeObjectAsDoc(Collections.emptyList(), "People");
+        var report = new Report(new CsvDocument());
+        report.writeObjectAsDoc(List.of(Person.builder()
+                .firstName("Mike")
+                .lastName("Petrov")
+                .dayOfBirth(10)
+                .monthOfBirth(Months.AUGUST)
+                .yearOfBirth(1988)
+                .password("myPassword")
+                .build()), "People");
     }
 }
